--- a/src/lab/HomePage.html
+++ b/src/lab/HomePage.html
@@ -168,6 +168,7 @@ edit -->
 
         <footer class="default" id="lab-footer">
             <!-- Put the content here-->
+			Copyright &copy 2016 - 2020 SOLVE - The Virtual Lab at NITK Surathkal
         </footer>
     </div>
 </body>
