--- a/src/lab/content.html
+++ b/src/lab/content.html
@@ -112,7 +112,7 @@ edit -->
 
                     <div class="content" id="lab-article-section-1-content">
 						<p style="text-indent: 50px;">Strength of material is the body of knowledge which deals with the relation between internal forces, deformations and external loads etc. This laboratory provides the basic knowledge of strength of materials and here, the students can perform different tests on different materials.</p><br>
-						<p style="text-indent: 50px;">Click on <b>“List of experiments”</b> to see which are the labs available to explore.</p>
+						<p style="text-indent: 50px;">Click on <strong>List of experiments</strong> to see which are the labs available to explore.</p>
 						</br></br>
 						
                     </div>
@@ -590,6 +590,7 @@ edit -->
 
         <footer class="default" id="lab-footer">
             <!-- Put the content here-->
+			Copyright &copy 2016 - 2020 SOLVE - The Virtual Lab at NITK Surathkal
         </footer>
     </div>
 
