--- a/src/lab/exp11/index.html
+++ b/src/lab/exp11/index.html
@@ -169,7 +169,7 @@ $(document).ready(function()
 <script type="text/javascript" src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
 -->
 <script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
-	<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 SOLVE - The Virtual Lab at NITK Surathkal</div>
+	<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 - 2020  SOLVE - The Virtual Lab at NITK Surathkal</div>
 
 </body>
 </html>
