--- a/src/lab/exp5/index.html
+++ b/src/lab/exp5/index.html
@@ -140,7 +140,7 @@ $(document).ready(function()
 <body>
     <div id="container"></div>
 	<div id="hidden-content"></div>
-	<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 SOLVE - The Virtual Lab at NITK Surathkal</div>
+	<div id="footer" style="text-align:center; width:100%; color:white">Copyright &copy 2016 -2020 SOLVE - The Virtual Lab at NITK Surathkal</div>
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({jax: ["input/TeX", "output/HTML-CSS"],tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
 	  "HTML-CSS": {  preferredFont: "STIX" }});
