--- a/src/lab/images/DSSPlate/index.html
+++ b/src/lab/images/DSSPlate/index.html
@@ -133,7 +133,7 @@
 <div class="simsubscreen" id="canvas5" style="visibility:hidden">
 <strong class="incanvas">STEP &nbsp;</strong><span class="circlebg">&nbsp;5&nbsp;</span>
 <p class="steptext" style="font-family:verdana; font-size:14px;">&nbsp;Observation and Result</p>
-<form id="lastform" style="visibility:visible">
+<div id="lastform" style="visibility:visible">
 <table border="border" id="last1" style="position:absolute;font-family:verdana; font-size:14px;left:0px;top:100px;cellspacing:10px;">
 <tr>
 	<th>Width of the failure plane 'w' (mm)</th>
@@ -168,7 +168,7 @@
 </tr>
 </table>
 <!-- <input type="button" id="check" value="Check" style="position:absolute;left:570px;top:290px;width:20%"> -->
-</form>
+</div>
 <table border="border" id="last" style="position:absolute;font-family:verdana; font-size:14px;left:0px;top:100px;visibility:hidden;cellspacing:10px;">
 <tr>
 	<th rowspan="2">Width of the failure plane 'w' (mm)</th>
