--- a/src/lab/images/DSRod/index.html
+++ b/src/lab/images/DSRod/index.html
@@ -124,7 +124,7 @@
 <div class="simsubscreen" id="canvas5" style="visibility:hidden">
 <strong class="incanvas">STEP &nbsp;</strong><span class="circlebg">&nbsp;5&nbsp;</span>
 <p class="steptext" style="font-family:verdana; font-size:14px;">&nbsp;Observation and Result</p>
-<form id="lastform" style="visibility:visible">
+<div id="lastform">
 <table border="border" id="last1" style="position:absolute;font-family:verdana; font-size:14px;left:20px;top:100px;cellspacing:10px;">
 <tr>
 	<th>Diameter(mm)</th>
@@ -156,7 +156,7 @@
 </tr>
 </table>
 <!-- <input type="button" id="check" value="Check" style="position:absolute;left:530px;top:260px;width:20%" onclick="checkValue();"> -->
-</form>
+</div>
 <table border="border" id="last" style="position:absolute;font-family:verdana; font-size:14px;left:20px;top:100px;cellspacing:10px;visibility:hidden;">
 <tr>
 	<th rowspan="2">Diameter(mm)</th>
