--- a/src/lab/images/DSRod/index.html
+++ b/src/lab/images/DSRod/index.html
@@ -82,11 +82,13 @@
 <img id="mot2" style="position: absolute; left:107px; top: 104px;" src="images/mot22.png"/> 
 <img id="red" style="position: absolute; left:37px; top: 240px;cursor:pointer" src="images/red.png"/>
 <img id="green" style="position: absolute; left:37px; top: 249px;cursor:pointer" src="images/green.png"/> 
+<img id="drodLeft" style="position: absolute; left:560px; top: 255px;transform: rotate(-180deg);" src="images/drod.png"/>
 <img id="zimg" style="position: absolute; left:450px; top: 125px;" src="images/zimg.png"/>
 <img id="drod" style="position: absolute; left:583px; top: 255px;" src="images/drod.png"/>
+<img id="drod2Left" style="position: absolute; left:285px; top: 225px;transform: rotate(-180deg);" src="images/drod.png"/>
 <img id="can34" style="position: absolute; left:248px; top: 140px;" src="images/can32.png"/>
 <img id="drod2" style="position: absolute; left:330px; top: 225px;" src="images/drod.png"/>
-<img id="can35" style="position: absolute; left:242px; top: 142px;" src="images/can36.png"/>
+<img id="can35" style="position: absolute; left:239px; top: 142px;" src="images/can36.png"/>
 <p id="v3-1" style="position:absolute;left: 280px; top:380px;font-family:verdana; font-size:14px;"></p>
 
 </div>
