--- a/src/lab/images/Tensionms/index.html
+++ b/src/lab/images/Tensionms/index.html
@@ -72,10 +72,11 @@
 	<span class="circlebg" id="stepnumber">&nbsp;3&nbsp;</span>
 	<p id="pumptext-2" class="steptext" style="font-family:verdana; font-size:14px;">&nbsp;Punch marks are made at a distance of 2.5d.</p>
 	<img id="can33" style="position: absolute; left:300px; top: 240px;" src="images/can23a.png"/> 
-	<img id="can35" style="position: absolute; left:360px; top:280px;visibility:hidden;" src="images/dot.png"/> 
-	<img id="can35a" style="position: absolute; left:380px; top: 300px;visibility:hidden;" src="images/dot.png"/> 
-	<img id="can35b" style="position: absolute; left:400px; top: 322px;visibility:hidden;" src="images/dot.png"/> 
-	<img id="can35c" style="position: absolute; left:427px; top: 346px;visibility:hidden;" src="images/dot.png"/> 
+	<img id="can35" style="position: absolute; left:361px; top:283px;visibility: hidden;" src="images/dot.png"/> 
+	<img id="can35a" style="position: absolute; left:378px; top: 298px;visibility: hidden;" src="images/dot.png"/> 
+	<img id="can35b" style="position: absolute; left:394px; top: 315px;visibility: hidden;" src="images/dot.png"/> 
+	<img id="can35c" style="position: absolute; left:410px; top: 332px;visibility: hidden;" src="images/dot.png"/> 
+	<img id="can35d" style="position: absolute; left:428px; top: 350px;visibility: hidden;" src="images/dot.png"/> 
 	<img id="can36" style="position: absolute; left:184px; top: 160px;" src="images/tool.png"/> 
 	<img id="can34" style="position: absolute; left:175px; top: 70px;cursor:pointer;" src="images/hammer.png"/> 
 	<p id="v3-0" style="position:absolute; left:100px; top: 380px;font-family:verdana; font-size:14px;"></p>
@@ -1013,7 +1014,7 @@
 			html += '<tr>'; 
 			
 			for(var key in tbdata[i]){
-				html += '<td style="font-family:verdana">' + tbdata[i][key] + '</td>'; 
+				html += tbdata[i][key] != 0 ? '<td style="font-family:verdana">' + tbdata[i][key] + '</td>':'<td style="font-family:verdana">' + '-' + '</td>' ; 
 			}
 			
 			html += '</tr>';
@@ -1039,7 +1040,7 @@
 			html += '<tr class="tr1">'; 
 			
 			for(var key in tbdata[i]){
-				html += '<td>' + tbdata[i][key] + '</td>'; 
+				html += tbdata[i][key] != 0 ? '<td style="font-family:verdana">' + tbdata[i][key] + '</td>':'<td style="font-family:verdana">' + '-' + '</td>' ; 
 			}
 			html += '</tr>';
 		}
