Updated Modified Contents

--- a/src/lab/images/Tensionci/index.html
+++ b/src/lab/images/Tensionci/index.html
@@ -35,7 +35,7 @@
 	<h4 class="incanvas" style="font-family:verdana;" >Objective</h4>
 	<p class="incanvas" style="font-family:verdana; font-size:14px;">To study the mechanical properties of cast iron specimen under tension load.</p>
 	<h4 class="incanvas" style="font-family:verdana;">Apparatus used:</h4>
-	<p class="incanvas" style="font-family:verdana; font-size:14px;" >Universal Testing Machine, Dial Indicators, Scale & Vernier calipers.</p>
+	<p class="incanvas" style="font-family:verdana; font-size:14px;" >Universal Testing Machine, Dial Indicators, Extensometer, Scale & Vernier calipers.</p>
 	<img id="can00" style="position: absolute; left: 120px; top: 120px;width:50%" src="images/main.png"/>
 	<!-- <img id="can01" style="position: absolute; left: 400px; top: 100px;" src="images/dialind.png"/> -->
 </div>
@@ -210,7 +210,7 @@
 		</tr>
 		<tr>
 			<th >Least Count(LC) in mm</th>
-			<td id="ta88">0.01</td>
+			<td id="">0.01</td>
 		</tr>
 	</table>
 	</div>
