--- a/src/lab/images/compci/index.html
+++ b/src/lab/images/compci/index.html
@@ -285,7 +285,7 @@
 	var zm=0;
 	var grp;
 	
-<!-- Experimental Results -->
+// <!-- Experimental Results -->
 
 var slope=[[2.41,1.07,2.38],
 			[1.21,0.64,1.42],
@@ -310,7 +310,7 @@ var vals=[[22.51,40.0,397.76,460.08,616.58,21.52,10.72,23.93],
 		 [20.3,42.5,323.49,275.12,803.63,19.05,8.92,21.68],
 		 [20.07,45.0,316.2,249.84,806.64,18.64,6.4,21.82]];
 	
-<!---Graph Data---------->	
+// <!---Graph Data---------->	
 var data1 =[[ 0.0 , 0.0 ],
 			[ 5.0 , 1.0 ],
 			[ 10.0 , 3.0 ],
@@ -864,7 +864,7 @@ var data10 = [[ 0.0 , 0.0 ],
 			[ 260.0 , 481.0 ]
 			];
 			
-<!--Plotly graph---->
+// <!--Plotly graph---->
 var trace1 = {
 				y: [0.0,5.0,10.0,15.0,20.0,25.0,30.0,35.0,40.0,45.0,50.0,55.0,60.0,65.0,70.0,75.0,80.0,85.0,90.0,95.0,100.0,105.0,110.0,115.0,120.0,125.0,130.0,135.0,140.0,145.0,150.0,155.0,160.0,165.0,170.0,175.0,180.0,185.0,190.0,195.0,200.0,205.0,210.0,215.0,220.0,225.0,230.0,235.0,240.0,245.0,250.0], 
 				x: [0.0,1.0,3.0,5.0,7.0,9.0,11.0,13.0,15.0,17.0,19.0,21.0,23.0,25.0,29.0,34.0,38.0,44.0,51.0,58.0,69.0,76.0,83.0,94.0,107.0,119.0,128.0,146.0,154.0,168.0,179.0,186.0,198.0,207.0,215.0,226.0,238.0,256.0,271.0,295.0,314.0,326.0,344.0,358.0,373.0,389.0,401.0,414.0,423.0,435.0,456.0], 
