--- a/src/lab/images/compms/index.html
+++ b/src/lab/images/compms/index.html
@@ -304,7 +304,7 @@ var vals=[[21.5,41.3,362.87,191.94,810.77,17.86,9.49,21.18],
          [22.3,42,390.37,148.27,703.64,16.59,7.54,21.95],
          [20.4,43,326.69,171.16,810.77,16.31,7.45,20.08],
          [20.1,42,317.15,213.43,866.09,18.26,8.91,20.14],
-		 [20,45,314,171.83,198.03,874.78,15.62,6.74,19.85],
+		 [20,45,314,171.83,874.78,15.62,6.74,19.85],
 		 [20.05,45,315.57,214.5,870.42,15.81,9.2,20.52],
 		 [22.7,41.3,404.5,126.11,654.81,18.6,5.51,22.54],
 		 [21,45,346.19,147.35,793.44,12.75,5.61,15.3],
@@ -842,7 +842,8 @@ var trace10 = {
 			};
 min=1;
 max=10;
-p=Math.floor(Math.random() * (max - min + 1) ) + min;
+p=5;
+// p=Math.floor(Math.random() * (max - min + 1) ) + min;
 if(p==1)
 {
 	data=[trace1];
@@ -904,7 +905,7 @@ else if(p==8)
 else if(p==9)
 {
 	data=[trace9];
-	gr=8;
+	gr=9;
 	vals0=vals[8];
 	tbdata=data9;
 }
