--- a/src/lab/images/compms/index.html
+++ b/src/lab/images/compms/index.html
@@ -842,8 +842,7 @@ var trace10 = {
 			};
 min=1;
 max=10;
-p=5;
-// p=Math.floor(Math.random() * (max - min + 1) ) + min;
+p=Math.floor(Math.random() * (max - min + 1) ) + min;
 if(p==1)
 {
 	data=[trace1];
