--- a/src/lab/images/Tensionms/index.html
+++ b/src/lab/images/Tensionms/index.html
@@ -852,8 +852,7 @@
 				
 	min=1;
 	max=10;
-	// p=Math.floor(Math.random() * (max - min + 1) ) + min;
-	p=1;
+	p=Math.floor(Math.random() * (max - min + 1) ) + min;
 	if(p==1)
 	{
 		data=[trace1];
