--- a/src/lab/exp13/content.html
+++ b/src/lab/exp13/content.html
@@ -328,7 +328,14 @@ edit -->
 			</div>
 
 			<div class="content" id="experiment-article-section-7-content">
-									
+				<h3 class="videoHeader">Experimental Demo Video</h3>
+				<iframe width="100%" height="500" src="https://www.youtube.com/embed/tc2WJ2a9miQ" title="YouTube video player"
+					frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
+				<h3 class="videoHeader">Simulation Demo Video</h3>
+				<iframe width="100%" height="500" src="https://www.youtube.com/embed/yY5G0gCHDDI" title="YouTube video player"
+							frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen></iframe>
 			</div>
 		</section>
 		
