--- a/src/lab/exp16/content.html
+++ b/src/lab/exp16/content.html
@@ -265,7 +265,14 @@ edit -->
 			</div>
 
 			<div class="content" id="experiment-article-section-7-content">
-									
+					<h3 class="videoHeader">Experimental Demo Video</h3>
+					<iframe width="100%" height="500" src="https://www.youtube.com/embed/HMsouMEAqt8" title="YouTube video player"
+						frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+					<h3 class="videoHeader">Simulation Demo Video</h3>
+					<iframe width="100%" height="500" src="https://www.youtube.com/embed/f8tF4bG5ugQ" title="YouTube video player"
+						frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
 			</div>
 		</section>
 		
