--- a/src/lab/exp21/content.html
+++ b/src/lab/exp21/content.html
@@ -266,8 +266,11 @@ edit -->
 									Video 
 			</div>
 
-			<div class="content" id="experiment-article-section-7-content">
-									
+			<div class="content" id="experiment-article-section-7-content">				
+				<h3 class="videoHeader">Simulation Demo Video</h3>
+				<iframe width="100%" height="500" src="https://www.youtube.com/embed/3QiVdb8LzHo" title="YouTube video player"
+					frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+					allowfullscreen></iframe>
 			</div>
 		</section>
 
