--- a/src/lab/exp5/content.html
+++ b/src/lab/exp5/content.html
@@ -276,7 +276,14 @@ edit -->
 				</div>
 
 				<div class="content" id="experiment-article-section-7-content">
-										
+					<h3 class="videoHeader">Experimental Demo Video</h3>
+					<iframe width="100%" height="500" src="https://www.youtube.com/embed/2aESv8k4L08" title="YouTube video player"
+						frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
+					<h3 class="videoHeader">Simulation Demo Video</h3>
+					<iframe width="100%" height="500" src="https://www.youtube.com/embed/T6x86RJi_Iw" title="YouTube video player"
+						frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+						allowfullscreen></iframe>
 				</div>
 			</section>
 
